# opendataswiss

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pdm.toml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
converters/: package_json_xml_converter.py
utils/: s3.py
