[project]
name = "opendataswiss"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Woodcock", email = "samuel.woodcock@wsl.ch"},
    {name= "Rebecca Kurup Buchholz", email = "None"}
]
dependencies = [
    "requests==2.27.1",
    "xmltodict>=0.13.0",
    "python-dateutil>=2.8.2",
    "boto3>=1.22.12",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=0.20.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
