[project]
name = "opendataswiss"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Woodcock", email = "samuel.woodcock@wsl.ch"},
    {name= "Rebecca Kurup Buchholz", email = "None"}
]
dependencies = [
    "envidat-utils[dotenv]>=0.2.1",
    "xmltodict>=0.13.0",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
